# automated-underwater-area-estimation

./: .gitignore  README.md  WARP.md  pyproject.toml  segmentation_evaluation.py  test.ipynb
automated_underwater_area_estimation/: main.py
automated_underwater_area_estimation/download/: download_gcs_bucket.py
automated_underwater_area_estimation/preprocess_data/: preprocess_segmentation_validation.py
automated_underwater_area_estimation/segmentation/: class_mapping.py  evaluation_metrics.py  model.py  segmentation_dataset.py  utils.py
automated_underwater_area_estimation/segmentation/epfl/: classmap.py  model.py
automated_underwater_area_estimation/segmentation/reefsupport/: classmap.py  model.py
tests/: test_segmentation.py
